# RemoteDynamicInstructions-Android

./: LICENSE  README.md  build.gradle  dependencies.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/imurluck/rdi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/imurluck/rdi/: App.java  MainActivity.java  OnMethodEnterActivity.java
app/src/main/res/layout/: activity_main.xml  activity_on_method_enter.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/imurluck/rdi/: ExampleUnitTest.java
capability-api/: build.gradle  consumer-rules.pro
capability-api/src/androidTest/java/com/imurluck/rdi/api/: ExampleInstrumentedTest.java
capability-api/src/main/java/com/imurluck/rdi/api/: ICapability.java  IMethodCallContext.java  IOnMethodEnterCapability.java
capability-api/src/test/java/com/imurluck/rdi/api/: ExampleUnitTest.java
core/: build.gradle
core/src/androidTest/java/com/imurluck/rdi/core/: ExampleInstrumentedTest.java
core/src/main/cpp/: CMakeLists.txt  art_env.cpp  jvmti_registry.cpp  jvmti_utils.cpp  rdi_agent.cpp  rdi_base.cpp  rdi_jni.cpp
core/src/main/cpp/include/: art_env.h  jvmti_registry.h  jvmti_utils.h  log_utils.h  rdi_agent.h  rdi_base.h  rdi_jni.h
core/src/main/java/com/imurluck/rdi/core/: CapabilityRegistry.java  Configurations.java  NativeLibraryExtractor.java  Rdi.java  RdiAgent.java  RdiAgentHolder.java  RdiJni.java
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
